--- a/rails6-bookers2-debug-ruby3-main/app/views/books/index.html.erb
+++ b/rails6-bookers2-debug-ruby3-main/app/views/books/index.html.erb
@@ -14,3 +14,30 @@
  　    </div>
   </div>
 </div>
+
+<% @books.each do |book| %>
+
+　<td>
+　　<%= link_to book.title, book_path(book.id) %>
+　</td>
+　<td>
+　　<%= book.body %>
+　</td>
+　　<td id="favorite_buttons_<%= book.id %>">
+　　　<%= render "favorites/favorite", book: book %>
+　　</td>
+　</tr>
+<% end %>
+
+
+　<td>
+　　<% if book.favorited_by?(current_user) %>
+　　　<%= link_to book_favorites_path(book), method: :delete, remote: true do %>  #remote: trueを追加
+  　　　♥<%= book.favorites.count %>いいね
+  　　<% end %>
+　　<% else %>
+  　　<%= link_to book_favorites_path(book), method: :post, remote: true do %>  #remote: trueを追加
+  　　　♡<%= book.favorites.count %>いいね
+  　　<% end %>
+　　<% end %>
+　</td>
